Changes to be committed:     modified:   index.html

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="clock-box">
         <h1>Relógio Digital</h1>
         <div class="box-time">
-            <div class="hours">10</div>
-            <div class="minutes">10</div>
-            <div class="seconds">10</div>
+            <div class="hours"></div>
+            <div class="minutes"></div>
+            <div class="seconds"></div>
         </div>
     </div>
 </body>
